openshift-ressources/customer-management-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-management-backend
  managedFields:
  name: customer-management-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: customer-management-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: customer-management-backend
        deploymentconfig: customer-management-backend
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: CUSTOMERCORE_BASEURL
          value: http://customer-core:8110
        image: image-registry.openshift-image-registry.svc:5000/lakeside-mutual/customer-management-backend
        imagePullPolicy: Always
        name: customer-management-backend
        ports:
        - containerPort: 8100
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
