openshift-ressources/customer-management-backend/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: customer-management-backend
  namespace: lakeside-mutual
spec:
  servers:
    - hosts:
        - customer-management-backend-gw.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
